@@ -1,3 +1,12 @@
+2000-06-02  Kazu Hirata  <kazu@hxi.com>=0A=
+
+	* h8300-dis.c: Follow the GNU coding style.
+	(bfd_h8_disassemble) Fix a typo.
+	
+2000-06-02  Nick Clifton  <nickc@cygnus.com>
+
+	* h8300-dis.c (bfd_h8_disassemble): 
+
 2000-06-01  Kazu Hirata  <kazu@hxi.com>
 
 	* h8300-dis.c (bfd_h8_disassemble_init): Fix a typo.
